# ublkit

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  logging.yaml  pyproject.toml  test_ublkit.py
.github/workflows/: publish.yml  tests.yml
config/: ublkit.yaml
examples/: batch_processing.py  cli_usage.md  single_file_csv.py  single_file_json.py  ublkit.yaml
src/ublkit/: __init__.py  config.py  version.py
src/ublkit/cli/: main.py
src/ublkit/core/: models.py  pipeline.py
src/ublkit/processors/: csv_processor.py  json_processor.py  xml_processor.py
src/ublkit/utils/: decorators.py  json_flattener.py
tests/: conftest.py
tests/fixtures/: sample_creditnote.xml  sample_despatchadvice.xml  sample_invoice.xml  sample_invoice_multi_tax.xml  sample_invoice_with_order.xml  sample_order.xml  ublkit.yaml  ublkit_test_1.yaml  ublkit_test_2.yaml  ublkit_test_3.yaml  ublkit_test_4.yaml
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_xml_processor.py
