[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ublkit"
version = "0.1.1"
description = "Simple, powerful UBL XML to JSON/CSV converter with built-in exception handling"
readme = "README.md"
authors = [
    {name = "SherozShaikh", email = "shaikh.sheroz07@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Operating System :: OS Independent",
]
keywords = ["ubl", "xml", "json", "csv", "converter", "invoice", "e-invoicing"]
requires-python = ">=3.8"
dependencies = [
    "lxml>=4.9.0",
    "polars>=0.19.0",
    "pyyaml>=6.0",
    "py-logex-enhanced>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest-mock>=3.11.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/sherozshaikh/ublkit"
Documentation = "https://github.com/sherozshaikh/ublkit#readme"
Repository = "https://github.com/sherozshaikh/ublkit"
"Bug Tracker" = "https://github.com/sherozshaikh/ublkit/issues"

[project.scripts]
ublkit = "ublkit.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ublkit = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ublkit --cov-report=term-missing --cov-report=html"
